--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+  /* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap'); */
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
 
-.eventInput {
-    @apply outline-none bg-slate-300/10 rounded-sm border-b-2 py-2 border-[#1F65C8] placeholder-gray-500 transition-all w-full
-}
+  .eventInput {
+      @apply outline-none bg-slate-300/10 rounded-sm border-b-2 py-2 border-[#1F65C8] placeholder-gray-500 transition-all w-full
+  }
